--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -20,7 +20,7 @@
 #quote-label{
     color: #000;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -30,6 +30,14 @@
     border-radius: 4px;
      border: 1px solid rgba(0, 0, 0, 0.20);
     /* background: #FFF; */
+    color: #000;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal; 
+}
+#productSpecificLabel{
     color: #000;
     font-family: Roboto;
     font-size: 16px;
