--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-4">
                             <label for="minmax-buttons" id="quote-label">Product</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-dropdown" formControlName="" (change)="onProductSelected($event)">
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="" (change)="onProductSelected($event)">
                                 <option value=""></option>
                                 <option *ngFor="let product of productList" [value]="product.code">{{ product.description }}</option>
                             </select>   
@@ -79,8 +79,8 @@
                     
                      <!-- ROW 4 -->
                     <div *ngIf="formData && selectedProductCode" class="row">
-                        <div class="col-12">
-                            <h4>Product-Specific Form Fields</h4>
+                        <div class="col-12 mt-4">
+                            <p id="productSpecificLabel">Product Specific Form Fields</p>
                             <div class="row">
                                 <div class="col-4">
                                     <form [formGroup]="dynamicForm">
