--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.css
@@ -11,13 +11,13 @@
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
 }
 .summary-label{
     color: rgba(0, 0, 0, 0.60);
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -25,9 +25,9 @@
 .summary-value{
     color: #000;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
 }
 #value{
@@ -66,7 +66,7 @@ line-height: normal;
 .cancelQouteTitle{
     color: #000;
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
@@ -83,8 +83,11 @@ border: 1px solid #00529B;
     padding: 0.3rem 1rem; 
     color: rgba(0, 0, 0, 0.60);
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+#closeBtn{
+    font-size: 15px;
 }
