--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -42,8 +42,8 @@
                                     {{ getFolderCategoryName(report.folder) }}
                                 </a>
                                 <ul class="dropdown-menu">
-                                  <li (click)="reAssignReportFolder('M', report)">My Reports</li>
-                                  <li (click)="reAssignReportFolder('S', report)">Shared Reports</li>
+                                  <li class="reAssignReport" (click)="reAssignReportFolder('M', report)">My Reports</li>
+                                  <li class="reAssignReport" (click)="reAssignReportFolder('S', report)">Shared Reports</li>
                                 </ul>
                             </div>
                         </td>
@@ -56,6 +56,7 @@
                                 <ul class="dropdown-menu">
                                   <li 
                                     *ngFor="let dashboad of dashboards"
+                                    class="reAssignReportDashboard"
                                     (click)="reAssignReportDashboard(dashboad.id, report)"
                                   >
                                     {{ dashboad?.name }}
