--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -324,9 +324,8 @@
 
 
 
-<div  class="modal fade" #NewQuoteModal id="NewQuoteModal" tabindex="-1" role="dialog" aria-labelledby="NewQuoteModalTitle"
+<!-- <div  class="modal fade" #NewQuoteModal id="NewQuoteModal" tabindex="-1" role="dialog" aria-labelledby="NewQuoteModalTitle"
   aria-hidden="true">
-
   <div  class="modal-dialog modal-dialog-centered" role="document">
     <div  class="modal-content" style="border: 0.2px solid var(--primary-color);">
       <div class="modal-body card-modal">
@@ -364,5 +363,82 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
+
+
+
+<div class="modal fade" tabindex="-1" #NewQuoteModal id="NewQuoteModal" aria-labelledby="NewQuoteModal" aria-hidden="true"
+          style="color: #333;">
+            <div class="modal-dialog">
+              <div class="modal-content modal-content-sub-header">
+                <!-- <div class="modal-header">
+                  <h5 class="modal-title" id="NewQuoteModal">Capture category details</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                  ></button>
+                </div> -->
+                <div class="modal-body">
+                  <div class="d-flex justify-content-between">
+
+                    <div data-bs-dismiss="modal"  class="card sub-card" routerLink="/home/lms/ind/quotation/quick" (click)="closeModal()">
+                      <div class=" with-background-image lms-ind-image"  >
+                        <div class="sub-card-content ">
+                          &nbsp;
+
+                        </div>
+                      </div>
+                      <div class="sub-card-text  d-flex justify-content-center">LMS Individual</div>
+                    </div>
+
+                    <div data-bs-dismiss="modal"  class="card sub-card" routerLink="/home/lms/grp/quotation/quick" (click)="closeModal()">
+                      <div class=" with-background-image lms-grp-image" >
+                        <div class="sub-card-content ">
+                          &nbsp;
+
+                        </div>
+                      </div>
+                      <div class="sub-card-text  d-flex justify-content-center">LMS Group</div>
+                    </div>
+
+
+                    <div data-bs-dismiss="modal"  class="card sub-card" (click)="closeModal()" routerLink="/home/gis/quotation/quick-quote">
+                      <div class=" with-background-image gis-image" >
+                        <div class="sub-card-content ">
+                          &nbsp;
+
+                        </div>
+                      </div>
+                      <div class="sub-card-text  d-flex justify-content-center">GIS</div>
+                    </div>
+
+
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- <div class="modal fade" tabindex="-1" #NewQuoteModal id="NewQuoteModal" aria-labelledby="NewQuoteModal" aria-hidden="true"
+          style="color: #333;">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+
+
+                </div>
+              </div>
+            </div>
+          </div> -->
