--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+
+
   <div style="display: flex; padding-top: 1rem; justify-content: end">
     <app-dynamic-breadcrumb [breadCrumbItems]="breadCrumbItems">
     </app-dynamic-breadcrumb>
@@ -21,8 +23,16 @@
       "
     >
       <div
-        class="fadeIn full-border"
-      >
+        class="fadeIn full-border" style="position: relative">
+        <ngx-spinner
+        name="summary_screen"
+          type="ball-clip-rotate-multiple"
+          [fullScreen]="false"
+          color="#00529B"
+          size="medium"
+          bdColor="rgba(255, 255, 255, 0.966)"
+        ></ngx-spinner>
+
         <div class="text-black fw-bold d-flex justify-content-center mb-4 fs-6">
           Overview Summary
         </div>
@@ -35,7 +45,7 @@
                   <span class="font-grey__font-eight__700"
                     >Proposal Number:
                   </span>
-                  <span class="fw-light">{{ "A46756575P" }}</span>
+                  <span class="fw-light">{{ "-" }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Intermediary: </span>
@@ -47,7 +57,7 @@
                 </div>
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Sum assured: </span>
-                  <span class="fw-light">{{ 1000 }}</span>
+                  <span class="fw-light">{{ summaryRecord['sum_insured'] | number}}</span>
                 </div>
               </div>
             </div>
@@ -57,7 +67,7 @@
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Product: </span>
                   <span class="fw-light">{{
-                    "Education endowement plan"
+                    productList | product : summaryRecord['product_code']
                   }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
@@ -66,7 +76,7 @@
                 </div>
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Premium: </span>
-                  <span class="fw-light">{{ 1000 }}</span>
+                  <span class="fw-light">{{ summaryRecord['premium'] | number}}</span>
                 </div>
               </div>
             </div>
@@ -143,6 +153,7 @@
                       </div>
                       <div class="col-12">
                         <div
+                        routerLink="/home/lms/ind/quotation/client-details"
                           class="fs-5 d-flex justify-content-end p-2"
                           style="color: var(--primary-color)"
                         >
@@ -175,14 +186,17 @@
               >
                 <div class="container">
                   <div class="row">
+
+                    <ng-container *ngFor="let coverType of summaryRecord['quick_quote_covers']">
                     <div class="col-md-6">
+                      <!-- {{coverType |json}} -->
                       <div class="m-4">
                         <div>Child birth expense</div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
                             >Premium:
                           </span>
-                          <span class="fw-light">{{ "1000" }}</span>
+                          <span class="fw-light">{{ summaryRecord['premium'] }}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
@@ -193,7 +207,7 @@
                       </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                       <div class="m-4">
                         <div>Mutual Education Endowement Plan</div>
                         <div class="d-flex justify-content-between">
@@ -227,10 +241,13 @@
                           <span class="fw-light">{{ "300000" }}</span>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
+
+                  </ng-container>
                   </div>
                   <div class="col-12">
                     <div
+                    routerLink="/home/lms/ind/quotation/client-details"
                       class="fs-5 d-flex justify-content-end p-2"
                       style="color: var(--primary-color)"
                     >
@@ -261,44 +278,45 @@
               >
                 <div class="container">
                   <div class="row">
+                    <ng-container *ngFor="let beneficiary of beneficiaryList">
                     <div class="col-md-6">
                       <div class="m-4">
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">Name: </span>
-                          <span class="fw-light">{{ "BUI" }}</span>
+                          <span class="fw-light">{{ beneficiary['beneficiary_info']['first_name'] +' '+beneficiary['beneficiary_info']['first_name'] | uppercase }}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
                             >Benefit proportion:
                           </span>
-                          <span class="fw-light">{{ "50%" }}</span>
+                          <span class="fw-light">{{ beneficiary['percentage_benefit'] | number}}%</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
                             >Date of Birth:
                           </span>
-                          <span class="fw-light">{{ "10/10/1980" }}</span>
+                          <span class="fw-light">{{ beneficiary['beneficiary_info']['date_of_birth'] |date:'short' }}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
                             >Relation:
                           </span>
-                          <span class="fw-light">{{ "child" }}</span>
+                          <span class="fw-light">{{ relationTypeList | relationType : beneficiary?.beneficiary_info?.relation_code }}</span>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <!-- <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700"
                             >Contact:
                           </span>
-                          <span class="fw-light">{{ "070123456789" }}</span>
-                        </div>
+                          <span class="fw-light">{{ beneficiary['percentage_benefit'] }}</span>
+                        </div> -->
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">Type: </span>
-                          <span class="fw-light">{{ "Trustee" }}</span>
+                          <span class="fw-light">{{ beneficiary["type"] === "B" ? "Beneficairy" : "Trustee"  |uppercase}}</span>
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                       <div class="m-4">
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">Name: </span>
@@ -397,10 +415,12 @@
                           <span class="fw-light">{{ "Adongo" }}</span>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
+                  </ng-container>
                   </div>
                   <div class="col-12">
                     <div
+                    routerLink="/home/lms/ind/quotation/client-details"
                       class="fs-5 d-flex justify-content-end p-2"
                       style="color: var(--primary-color)"
                     >
@@ -452,6 +472,7 @@
                     </div>
                     <div class="col-12">
                       <div
+                      routerLink="/home/lms/ind/quotation/client-details"
                         class="fs-5 d-flex justify-content-end p-2"
                         style="color: var(--primary-color)"
                       >
