--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -52,7 +52,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     background: #00529B;
 }
 select#quote-input option {
