--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.css
@@ -72,7 +72,7 @@ line-height: normal;
     line-height: 24px;
 }
 .btn{
-    border-radius: 4px;
+    /* border-radius: 4px; */
 border: 1px solid #00529B;
 }
 #closeBtn{
