--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -216,6 +216,32 @@
               aria-expanded="false"
               style="font-size: 12px"
             >
+
+              <i
+                class="fa-solid fa-building-shield"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "lang.policy" | translate | uppercase }}
+            </a>
+            <ul class="dropdown-menu">
+              <ng-container *ngFor="let team of policySubMenuList">
+                <li>
+                  <a class="dropdown-item" (click)="dynamicSideBarMenu(team)">{{
+                    team["name"]
+                  }}</a>
+                </li>
+              </ng-container>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
               <i
                 class="fa-solid fa-handshake-angle"
                 style="padding-right: 6px; font-size: 16px"
@@ -234,6 +260,8 @@
               </ng-container>
             </ul>
           </li>
+
+
           <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Claims
@@ -419,26 +447,3 @@
               </div>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-          <!-- <div class="modal fade" tabindex="-1" #NewQuoteModal id="NewQuoteModal" aria-labelledby="NewQuoteModal" aria-hidden="true"
-          style="color: #333;">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-body">
-
-
-                </div>
-              </div>
-            </div>
-          </div> -->
