--- a/src/app/features/reports-v2/report-preview/report-preview.component.html
+++ b/src/app/features/reports-v2/report-preview/report-preview.component.html
@@ -90,6 +90,7 @@
               class="text-center bg-transparent btn-full-width"
               placeholder="Pilot report"
               disabled
+              [attr.value]="reportNameRec"
             >
           </div>
 
