--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -94,6 +94,23 @@ a.routerLink.active .circle {
   height: 14px;
 }
 
+.edit-button {
+  color: green;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.delete-button {
+  color: red;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.edit-button i, .delete-button i {
+  font-size: 15px;
+}
+
 @media (max-width: 820px) {
   .scrollable-container {
     flex-direction: column;
