--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -7,21 +7,28 @@
             <h4>Group quote summary</h4>
             <h6 class="mt-4" style="color: gray;">Here is the quote summary for the <b style="color: black;">Whole life
                     product</b></h6>
-            <h5 class="mt-3" style="color: gray;">
-                <label style="margin-right: 30px; display: inline-block; width: 100px;">Premium</label>
-                <span style="color: black;">{{premiumForScreen3}}</span>
-            </h5>
-            <h5 class="mt-2" style="color: gray;">
-                <label style="margin-right: 30px; display: inline-block; width: 100px; white-space: nowrap;">Sum
-                    assured</label>
-                <span style="color: black;">{{sumAssuredForScreen3}}</span>
-            </h5>
+           </div>
+
+           <div style="display: flex; justify-content: center;">
+            <table>
+              <tr>
+                <td><span class="s3Label">Premium</span></td>
+                <td><span class="s3Value" style="color: black; margin-left: 15px;">{{premiumForScreen3}}</span></td>
+              </tr>
+              <tr>
+                <td><span class="s3Label">Sum assured</span></td>
+                <td><span class="s3Value" style="color: black; margin-left: 15px;">{{sumAssuredForScreen3}}</span></td>
+              </tr>
+            </table>
+          </div>
+
+            <div class="col-md-12 text-center">
             <hr class="mt-4 custom-hr">
         </div>
 
         <div class="row col-12 mt-3" style="color: black; padding-left: 25px;">
             <div class="col-md-4 col-xs-12">
-                <table style="width: 100%;">
+                <table style="width: 100%; min-height: 133px;">
                     <tr>
                         <td style="width: 50%; align-items: left; color: grey;">Quotation number: </td>
                         <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
@@ -41,7 +48,7 @@
                 </table>
             </div>
             <div class="col-md-4 col-xs-12">
-                <table style="width: 100%;">
+                <table style="width: 100%; min-height: 100px;">
                     <tr>
                         <td style="width: 50%; align-items: left; color: grey;">Quotation status: </td>
                         <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
@@ -57,7 +64,7 @@
                 </table>
             </div>
             <div class="col-md-4 col-xs-12">
-                <table style="width: 100%;">
+                <table style="width: 100%; min-height: 100px;">
                     <tr>
                         <td style="width: 50%; align-items: left; color: grey;">Effective date: </td>
                         <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
@@ -74,46 +81,46 @@
             </div>
         </div>
 
-        <div class="summary-container col-12 mt-5" style="padding-right: 40px;">
-            <div class="summary col-md-4 col-sm-12 col-xs-12 mx-3">
-                <h5>Cover summary</h5>
-                <div>
+        <div class="summary-container col-12 mt-5" style="padding-right: 50px;">
+            <div class="sub-summary col-md-4 col-sm-12 col-xs-12">
+                <h5 class="summary-label">Cover summary</h5>
+                <div class="summary" style="width: 100%; height: 100%;">
                     <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 20px;">
                         <h6 style="color: black;">Cover 1</h6>
                         <table style="width: 100%;">
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Main Cover: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Cover types: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Select rates: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                         </table>
                     </div>
 
-                    <div class="col-md-12 col-sm-12 col-xs-12 mt-4" style="padding-left: 20px;">
+                    <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 20px;">
                         <h6 style="color: black;">Cover 2</h6>
                         <table style="width: 100%;">
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Main Cover: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Cover types: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                             <tr>
                                 <td style="width: 50%; align-items: left; color: grey;">Select rates: </td>
-                                <td style="width: 50%; align-items: right;">{{ premiumForScreen3 }}</td>
+                                <td style="width: 50%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                             </tr>
                         </table>
                     </div>
-                    <div class="col-12 text-center mb-1">
+                    <div class="col-12 text-center">
                         <a href="#" style="text-decoration: underline;"
                             (click)="showCoverSummary(); $event.preventDefault();">
                             view more <i class="fas fa-plus-circle"></i>
@@ -121,18 +128,19 @@
                     </div>
                 </div>
             </div>
-            <div class="summary col-md-4 col-sm-12 col-xs-12 mx-3">
-                <h5>Category summary</h5>
+            <div class="sub-summary col-md-4 col-sm-12 col-xs-12">
+                <h5 class="summary-label">Category summary</h5>
+                <div class="summary" style="width: 100%; height: 100%; position: relative;">
                 <div class="col-md-12 col-xs-12" style="padding-left: 20px;">
                     <h6 style="color: black;">Category 1</h6>
                     <table style="width: 100%;">
                         <tr>
                             <td style="width: 60%; align-items: left; color: grey;">Short description: </td>
-                            <td style="width: 40%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 40%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 60%; align-items: left; color: grey;">Multiple of earnings: </td>
-                            <td style="width: 40%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 40%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                     </table>
                 </div>
@@ -142,53 +150,56 @@
                     <table style="width: 100%;">
                         <tr>
                             <td style="width: 60%; align-items: left; color: grey;">Short description: </td>
-                            <td style="width: 40%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 40%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 60%; align-items: left; color: grey;">Multiple of earnings: </td>
-                            <td style="width: 40%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 40%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                     </table>
                 </div>
-                <div class="col-12 col-sm-12 col-xs-12 text-center mt-5">
+                <div class="col-12 col-sm-12 col-xs-12 text-center view-more">
                     <a href="#" style="text-decoration: underline;"
                         (click)="showCategorySummary(); $event.preventDefault();">
                         view more <i class="fas fa-plus-circle"></i>
                     </a>
                 </div>
             </div>
-            <div class="summary col-md-4 col-sm-12 col-xs-12 mx-3">
-                <h5>Members summary</h5>
-                <div class="col-md-12 col-xs-12 mt-4" style="padding-left: 20px;">
+            </div>
+            <div class="sub-summary col-md-4 col-sm-12 col-xs-12">
+                <h5 class="summary-label">Members summary</h5>
+                <div class="summary" style="width: 100%; height: 100%; position: relative;">
+                <div class="col-md-12 col-xs-12" style="padding-left: 20px;">
                     <table style="width: 100%;">
                         <tr>
                             <td style="width: 70%; align-items: left; color: grey;">Members Covered: </td>
-                            <td style="width: 30%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 30%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 70%; align-items: left; color: grey;">Members above override FCL: </td>
-                            <td style="width: 30%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 30%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 70%; align-items: left; color: grey;">Members to reinsurance: </td>
-                            <td style="width: 30%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 30%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 70%; align-items: left; color: grey;">Computed FCL: </td>
-                            <td style="width: 30%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 30%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                         <tr>
                             <td style="width: 70%; align-items: left; color: grey;">FCL override: </td>
-                            <td style="width: 30%; align-items: right;">{{ premiumForScreen3 }}</td>
+                            <td style="width: 30%; align-items: right; color: #000;">{{ premiumForScreen3 }}</td>
                         </tr>
                     </table>
                 </div>
-                <div class="col-12 text-center mt-5" style="padding-top: 40px;">
+                <div class="col-12 text-center view-more">
                     <a href="#" style="text-decoration: underline;"
                         (click)="showMembersSummary(); $event.preventDefault();">
                         view members list
                     </a>
                 </div>
+            </div>
 
             </div>
         </div>
