--- a/src/app/features/lms/ind/components/need-analysis/components/questions/questions.component.css
+++ b/src/app/features/lms/ind/components/need-analysis/components/questions/questions.component.css
@@ -9,6 +9,22 @@
   padding-top: 0.5rem;
   font-size: 13px;
 }
+.option_selected {
+  padding-left: 1rem;
+  font-size: 13px;
+  padding-top: 0.5rem;
+  color: rgb(0, 0, 0);
+}
+.option {
+  padding-left: 1rem;
+  font-size: 13px;
+  padding-top: 0.5rem;
+  color: rgba(0, 0, 0, 0.655);
+}
+.option:hover {
+  cursor: pointer;
+  color: rgba(0, 0, 0);
+}
 
 @media screen and (max-width: 767px) {
   .radio-button {
